# spark-forecast

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  tox.ini
docs/: conf.py  index.rst  usage.rst
spark-forecast/: __init__.py  exc.py  logger.py  settings.py
spark-forecast/classification/: demand_classifier.py
spark-forecast/clustering/: tsfeaturization.py
spark-forecast/clustering/utils/: orthogonal_polynomial.py
spark-forecast/helpers/: __init__.py
spark-forecast/helpers/_pyspark/: __init__.py  forecast.py  hierarchical.py  time_series.py  utils.py
spark-forecast/metrics/: __init__.py  metrics.py  utils.py
spark-forecast/models/: __init__.py  local_forecasting.py  multivariate_forecasting.py  regressor.py  utils.py
spark-forecast/outlier_detection/: outlier_detection.py
spark-forecast/preprocessing/: __init__.py  outliers.py  utils.py
tests/: test_fairy_forecast.py
tests/integration/: __init__.py  conftest.py
tests/integration/data/: master_test.csv
tests/integration/data/time_series/: test_data_1.csv
tests/integration/helpers/: test_back_and_forward_fill.py  test_fill_series.py  test_hierarchical.py  test_series_classification.py  test_weekly_aggregation.py
tests/unit/: conftest.py  test_metrics.py
tests/unit/classification_tests/: test_demand_classifier.py
tests/unit/data/test_data_clean/: test_data_1.csv  test_data_2.csv  test_data_3.csv
tests/unit/models/: test_local_forecasting.py  test_multivariate_forecasting.py
tests/unit/preprocessing/: test_utils.py
tests/unit/test_outliers/: test_outlier_detection.py
(+12 files in other folders)
